// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders header with title 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <Touchable
    accessibilityComponentType="button"
    accessibilityTraits="button"
    borderlessRipple={false}
    disabled={false}
    onPress={[Function]}
    rippleColor="rgba(0, 0, 0, .32)"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontSize": 40,
          "lineHeight": 40,
          "marginTop": -10,
          "textAlign": "center",
        }
      }
    >
      <Translation
        passThrough="×"
      />
    </Text>
  </Touchable>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontSize": 12,
          "textAlign": "center",
          "textShadowColor": "#252A31",
          "textShadowOffset": Object {
            "height": 1,
            "width": 1,
          },
          "textShadowRadius": 2,
        }
      }
    >
      <Translation
        passThrough="Hotel Name"
      />
    </Text>
    <Text
      style={
        Object {
          "color": "#BAC7D5",
          "fontSize": 12,
          "textAlign": "center",
        }
      }
    >
      <Translation
        id="hotels.gallery.pagination"
        values={
          Object {
            "photoNumber": 2,
            "totalPhotos": 42,
          }
        }
      />
    </Text>
  </View>
  <View
    style={
      Object {
        "width": 50,
      }
    }
  />
</View>
`;

exports[`renders header with very long title 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "flexDirection": "row",
    }
  }
>
  <Touchable
    accessibilityComponentType="button"
    accessibilityTraits="button"
    borderlessRipple={false}
    disabled={false}
    onPress={[Function]}
    rippleColor="rgba(0, 0, 0, .32)"
    style={
      Object {
        "width": 50,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontSize": 40,
          "lineHeight": 40,
          "marginTop": -10,
          "textAlign": "center",
        }
      }
    >
      <Translation
        passThrough="×"
      />
    </Text>
  </Touchable>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
          "fontSize": 12,
          "textAlign": "center",
          "textShadowColor": "#252A31",
          "textShadowOffset": Object {
            "height": 1,
            "width": 1,
          },
          "textShadowRadius": 2,
        }
      }
    >
      <Translation
        passThrough="Hotel Name So Long That It Will Not Fit One Line And Needs To Be Wrapped"
      />
    </Text>
    <Text
      style={
        Object {
          "color": "#BAC7D5",
          "fontSize": 12,
          "textAlign": "center",
        }
      }
    >
      <Translation
        id="hotels.gallery.pagination"
        values={
          Object {
            "photoNumber": 2,
            "totalPhotos": 42,
          }
        }
      />
    </Text>
  </View>
  <View
    style={
      Object {
        "width": 50,
      }
    }
  />
</View>
`;
